# butchershoplabelprinter

./: .gitignore  BeepBehavior.py  Bottom.stl  ButcherShopLabelPrinter.ini  ButcherShopLabelPrinter.kv  ButcherShopLabelPrinter.py  Front.stl  KernScale.py  LTC Plunger.stl  LeftSide.stl  LosTresCazadoresApp.py  ManualScale.py  Pipfile  README.md  RaspiDisplayMount.stl  RightSide.stl  SettingDynamicOptions.py  datepicker.py  future-0.18.3-py3-none-any.whl  items.json  lostrescazadores.ini  lostrescazadores.kv  pyproject.toml  settings.json  static.ini
butchershoplabelprinter/: BeepBehavior.py  ButcherShopLabelPrinter.kv  ButcherShopLabelPrinter.py  DatePicker.py  DummyScale.py  ExtendedSettings.py  KernScale.py  ManualScale.py  SettingDynamicOptions.py  app_config.py  butchershoplabelprinter.ini  items.json  numeric.json  settings.json
butchershoplabelprinter/dto/: Animal.py  Cut.py
butchershoplabelprinter/label/: JGUHLabel.py  LTCLabel.py  PrinterLabel.py  __init__.py
butchershoplabelprinter/printer/: BrotherPrinter.py  DebugPrinter.py  Printer.py  __init__.py
butchershoplabelprinter/scale/: KernDe24K2AScale.py  KernScale.py  ManualScale.py  Scale.py  __init__.py
butchershoplabelprinter/settings/: ExtendedSettings.py  SettingDynamicOptions.py
butchershoplabelprinter/ui/: BeepButton.py  ClickableBeepLabel.py  TimeInput.py  TimePicker.py
butchershoplabelprinter/utility/: imports.py
